src/autocomplete/snapshots/jiq__autocomplete__autocomplete_render__autocomplete_render_tests__snapshot_autocomplete_popup_with_fields.snap
---
source: src/autocomplete/autocomplete_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ┌ Suggestions ──────────────┐                                                 "
"  │► name    [field: String]  │                                                 "
"  │  age     [field: Number]  │                                                 "
"  │  active  [field: Boolean] │                                                 "
"  └───────────────────────────┘                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
