src/autocomplete/snapshots/jiq__autocomplete__autocomplete_render__autocomplete_render_tests__snapshot_autocomplete_popup_with_functions.snap
---
source: src/autocomplete/autocomplete_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ┌ Suggestions ──────────────┐                                                 "
"  │► map(f)        [function] │                                                 "
"  │  select(expr)  [function] │                                                 "
"  │  keys          [function] │                                                 "
"  └───────────────────────────┘                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
