src/autocomplete/snapshots/jiq__autocomplete__autocomplete_render__autocomplete_render_tests__snapshot_autocomplete_scrollbar_at_middle.snap
---
source: src/autocomplete/autocomplete_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"  ╭ Suggestions ───────╮                                                        "
"  │  .field01 [field]  ║                                                        "
"  │  .field02 [field]  █                                                        "
"  │  .field03 [field]  █                                                        "
"  │  .field04 [field]  █                                                        "
"  │  .field05 [field]  █                                                        "
"  │  .field06 [field]  █                                                        "
"  │  .field07 [field]  ║                                                        "
"  │  .field08 [field]  ║                                                        "
"  │  .field09 [field]  ║                                                        "
"  │  .field10 [field]  ║                                                        "
"  ╰────────────────────╯                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
